add some methods